--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vrchatapi-python"]
+[submodule "libs/vrchatapi-python"]
 	path = libs/vrchatapi-python
 	url = https://github.com/vrchatapi/vrchatapi-python.git
