--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -37,7 +37,7 @@ jobs:
       id: meta
       uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
       with:
-        images: ${{ env.REGISTRY }}/${{ matrix.image_name }}
+        images: ${{ env.REGISTRY }}/eindev/${{ matrix.image_name }}
         tags: |
           type=schedule
           type=ref,event=branch
@@ -56,6 +56,6 @@ jobs:
     - name: Generate artifact attestation
       uses: actions/attest-build-provenance@v1
       with:
-        subject-name: ${{ env.REGISTRY }}/eindev/${{ matrix.image_name }}
+        subject-name: ${{ env.REGISTRY }}/${{ matrix.image_name }}
         subject-digest: ${{ steps.push.outputs.digest }}
         push-to-registry: true
